@@ -2,6 +2,7 @@
 -------------------
  - Use cgi.parse_header() to extract media_type for multipart/related checks 
    (#327)
+ - Don't ignore nil elements, instead return None when parsing xml (#328)
 
 
 0.27.0 (2017-01-28)
